--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reveal.js",
+  "name": "rd3-slides",
   "version": "3.5.0",
   "description": "The HTML Presentation Framework",
   "homepage": "http://lab.hakim.se/reveal-js",
@@ -7,8 +7,7 @@
   "main": "js/reveal.js",
   "scripts": {
     "test": "grunt test",
-    "start": "grunt serve",
-    "build": "grunt"
+    "start": "grunt serve"
   },
   "author": {
     "name": "Hakim El Hattab",
@@ -20,7 +19,7 @@
     "url": "git://github.com/hakimel/reveal.js.git"
   },
   "engines": {
-    "node": ">=4.0.0"
+    "node": ">=6.0.0"
   },
   "devDependencies": {
     "express": "~4.14.0",
